--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.gradle.build-scan' version '1.10.1'
     id 'java-library'
     id 'eclipse'
+    id 'idea'
     id "me.champeau.gradle.jmh" version "0.4.3"
 }
 
